tests/ui/resolve/issue-109250.rs
fn main() {       //~ HELP consider importing
    HashMap::new; //~ ERROR failed to resolve: use of undeclared type `HashMap`
}
